--- a/views/index/product-reviews.html
+++ b/views/index/product-reviews.html
@@ -11,6 +11,7 @@
 <!-- Formulario de Opiniones -->
 <form name="reviewForm" ng-submit="reviewForm.$valid && reviewCtrl.addReview(product)" novalidate>
 <table>
+	<th><h4>Deje un comentario</h4></th>
 	<tr>
 		<!-- Cantidad de estrellas -->
 		<td class="col-xs-4">
