--- a/views/index/product-panel.html
+++ b/views/index/product-panel.html
@@ -10,13 +10,16 @@
 			<a href ng-click="tab.selectTab(3)">Opiniones</a>
 		</li>
 	</ul>
+	<!-- Tab Descripción -->
 	<div class="panel" ng-show="tab.isSelected(1)">
 		<product-description></product-description>
 	</div>
+	<!-- Tab Especificaciones -->
 	<div class="panel" ng-show="tab.isSelected(2)">
 		<product-specs></product-specs>
 	</div>
+	<!-- Tab Opiniones -->
 	<div class="panel" ng-show="tab.isSelected(3)">
 		<product-review></product-review>
-	</div><!-- Fin div Opiniones -->
+	</div>
 </section>			
